SERVER-16529 Coarser OperationContext scope for background threads

Cuts the number of instantions of operation contexts and increases the
chance that a given maintenance operation would be seen in db.currentOp.

This is just a cosmetic change.